<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtHelpBodyManagerWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_body_help_manager_workout"
        android:layout_gravity="center"
        android:padding="10sp"
        />

    <TextView
        android:id="@+id/txtHelpBodyManagerWorkout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_body_help_manager_workout1"
        android:layout_gravity="center"
        android:padding="10sp"
        />

    <TextView
        android:id="@+id/txtHelpBodyManagerWorkout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_body_help_manager_workout2"
        android:layout_gravity="center"
        android:padding="10sp"
        />

    <TextView
        android:id="@+id/txtHelpBodyManagerWorkout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_body_help_manager_workout3"
        android:layout_gravity="center"
        android:padding="10sp"
        />

    <TextView
        android:id="@+id/txtHelpBodyManagerWorkout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_body_help_manager_workout4"
        android:layout_gravity="center"
        android:padding="10sp"
        />

    <TextView
        android:id="@+id/txtHelpBodyManagerWorkout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_body_help_manager_workout5"
        android:layout_gravity="center"
        android:padding="10sp"
        />

    <Button
        android:id="@+id/btnExitDialogManagerWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnExitDialog" />
</LinearLayout>