<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/btnPlayWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/play_workout"
            android:onClick="playWorkout"
            />

        <Button
            android:id="@+id/btnManagerWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/manage_workout"
            android:onClick="managerWorkout"
            />

        <Button
            android:id="@+id/btnManagerExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/manage_exercises" />

        <Button
            android:id="@+id/btnHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/help"
            android:onClick="helpDialog"
            />

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/about"
            android:onClick="aboutActivity"
            />
</LinearLayout>