<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tlAllView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="100">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:weightSum="100"
            >


            <TextView
                android:id="@+id/txtExName"
                android:background="@color/WhiteSmoke"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="100"
                android:text=""
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                app:autoSizeStepGranularity="1sp"
                />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:weightSum="100">

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/play"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:onClick="playPauseRoutine"
                />

            <TextView
                android:id="@+id/txtCountDown"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:text=""
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                app:autoSizeStepGranularity="1sp"
                />

            <Button
                android:id="@+id/btnLock"
                android:layout_weight="30"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/lockBtnText"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:onClick="lockButtons"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="65"
            android:weightSum="100"
            >

            <TextView
                android:id="@+id/txtPhaseCountDown"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="100"
                android:autoSizeMaxTextSize="200sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                android:text=""
                android:gravity="center"
                app:autoSizeStepGranularity="1sp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:weightSum="100"
            >

            <TextView
                android:id="@+id/txtSetsToDo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                app:autoSizeStepGranularity="1sp"
                android:gravity="center"
                android:text="" />

            <TextView
                android:id="@+id/txtRepsToDo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                app:autoSizeStepGranularity="1sp"
                android:gravity="center"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:weightSum="100">

            <Button
                android:id="@+id/btnPrev"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:text="@string/prevBtnText"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:onClick="tickPrevPhase"
                />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:text="@string/nextBtnText"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:onClick="tickNextPhase"
                />
        </TableRow>

    </TableLayout>